# mercury-messenger

./: CMakeLists.txt  configuration.cpp  configuration.h  main.cpp
model/: Session.cpp  Session.h  TextMessage.cpp  TextMessage.h  session.cpp  session.h  text_message.cpp  text_message.h
